fix about-section alignment

--- a/styles.css
+++ b/styles.css
@@ -71,8 +71,8 @@ ul {
 }
 
 .nav > ul > li > a {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .nav > ul > li > a:hover {
@@ -130,7 +130,7 @@ ul {
 /* header end */
 
 section {
-  scroll-margin-top: 60px;
+  scroll-margin-top: 4em;
 }
 
 .hero-section {
@@ -142,6 +142,7 @@ section {
 
 .hero-section h1 {
   font-size: 5em;
+  /* border: 1px solid red; */
 }
 
 /*
@@ -168,6 +169,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   color: #fff;
+  border: 1px solid red;
 }
 
 .hero-section .button {
@@ -180,10 +182,48 @@ section {
   border: 1px solid #fff;
 }
 
+
+.grid {
+  display: flex;
+  justify-content: space-between;
+  margin: 5.625em;
+  /* border: 1px solid red; */
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  /* border: 1px solid red; */
+  /* padding: 10px; */
+  /* margin: 10px; */
+}
+
+.brand-title {
+  font-size: 1em;
+  text-transform: uppercase;
+  text-align: left;
+  color: #0071EB;
+  /* padding: 5px; */
+}
+
+.subtitle {
+  font-size: 1.5em;
+  text-align: left;
+  /* padding: 5px; */
+  margin-bottom: 0.5em;
+}
+
+.desc {
+  text-align: left;
+  /* padding: 5px; */
+}
+
 .body-link {
   text-decoration: underline;
-  padding: 5px;
-  margin: 5px;
+  /* padding: 5px; */
+  margin-top: 1em;
 }
 
 .services-section {
@@ -203,27 +243,12 @@ section {
   border: 1px solid #fff;
 }
 
-.grid {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 20px;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 10px;
-  margin: 10px;
-}
-
 .img {
   width: 100%;
   max-width: 500px;
   background-position: center;
   object-fit: cover;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .card {
@@ -247,32 +272,13 @@ section {
 .info {
   min-width: 500px;
   max-width: 500px;
-  background-color: #eee;
+  /* background-color: #eee; */
 }
 
 .title-container {
   display: flex;
   text-align: left;
   width: 100%;
-}
-
-.brand-title {
-  font-size: 1em;
-  text-transform: uppercase;
-  text-align: left;
-  color: #0071EB;
-  padding: 5px;
-}
-
-.subtitle {
-  font-size: 1.5em;
-  text-align: left;
-  padding: 5px;
-}
-
-.desc {
-  text-align: left;
-  padding: 5px;
 }
 
 form {
